2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* README: add installation document by RubyGems.

	* lib/mkmf-gnome2.rb (#add_depend_package): add build directory to
	include path.

2010-09-21  Kouhei Sutou  <kou@cozmixng.org>

	* lib/mkmf-gnome2.rb (#check_cairo): support rcairo path customize
	by arguments.

	* lib/mkmf-gnome2.rb (#check_cairo): follow rcairo's path change.

	* ext/glib/extconfr.b, lib/mkmf-gnome2.rb: share Windows setup code.

	* Rakefile, lib/gnome2-win32-binary-downloader.rb: share
	Windows binary file downloader.

2010-09-11  Kouhei Sutou  <kou@cozmixng.org>

	* ext/glib2/rbglib_maincontext.c (idle_add): fix default priority.
	Reported by ashbb. Thanks!!!

2010-09-07  Kouhei Sutou  <kou@cozmixng.org>

	* lib/mkmf-gnome2.rb: ensure add generated enum file.

	* ./: support cross-compile for Windows.

2010-09-02  Kouhei Sutou  <kou@cozmixng.org>

	* ./: reconstruct directory structure for rake-compiler.

2010-07-24  Nikolai Weibull

	src/rbgutil.c: make sure that all strings are fred in
	rbgutil_glist2ary_string_and_free.

2010-07-23  Nikolai Weibull

	src/rbgutil.c: use rb_ensure around all *_free functions and also fix a
	bug that made sure that no lists were actually freed.  That's the price
	of reusing variables.

2010-07-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.c: fix coding style.

2010-07-12  Nikolai Weibull

	* src/rbglib.c: use rb_ensure for rbg_cstr_to_rval to free the memory
	even if an error occurs when creating the Ruby String.

2010-04-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.19.4 -> 0.20.0.

2010-04-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_typeinstance.c (each_cinfo): fix a memory leak.

2010-02-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb, src/lib/glib-mkenums.rb: add
	{:force_flags => [pattern1, ...]} options to glib_mkenums to force
	treating detected enum as flags.

2010-02-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgutil.[ch], src/glib2.def: add